# lab-latent-memory

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: default.yaml
experiments/results/: log.md
experiments/v0_activation_inject/: run.py
experiments/v1_comparison/: run.py
src/baseline/: full_context.py
src/eval/: metrics.py
src/injection/: injector.py
src/memory/: base.py  updaters.py
src/model/: loader.py
src/runner/: conversation.py
